# kysc-components

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
kysc_components/: __init__.py  registry.py
kysc_components/blocks/: about.html  booking_embed.html  contact_block.html  faq_accordion.html  footer.html  gallery.html  hero.html  nav.html  pricing_table.html  services.html  testimonials.html
kysc_components/tailwind/: preset.js
tests/: test_blocks.py
