[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kysc_components"
version = "0.1.0"
description = "Shared Jinja + Tailwind component blocks for the kevinsykes.ai ecosystem"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Kevin Sykes" }]
requires-python = ">=3.11"
dependencies = [
    "Jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/kevinhsykes/kysc-components"
Issues = "https://github.com/kevinhsykes/kysc-components/issues"

[tool.setuptools.packages.find]
include = ["kysc_components*"]

[tool.setuptools.package-data]
kysc_components = ["blocks/*.html"]

[tool.ruff]
line-length = 100
target-version = "py311"
